--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="description" content="Let the FoodJunction serve when u are hungry. No matter its morning noon or evening we have menu for you.">
+  <meta name="ROBOTS" content="INDEX, FOLLOW">
   <title>FoodJunction</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>  
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+  <base href="/">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container-fluid">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
